--- a/doc/05.transactional.md
+++ b/doc/05.transactional.md
@@ -5,16 +5,18 @@
 - @Transactional 메서드를 private 으로 선언하는 실수
 - CheckedException 을 사용할 때 Transactional 처리
   - 스프링 내부 소스코드 설명 (왜 CheckedException 은 취급안하는지)
-  - rollbackFor 옵션
+  - rollbackFor 옵션으로 CheckedException 을 롤백 처리하게끔 방어
 
 
 @Transactional 없이 save() 등과 같은 repository의 메서드를 수행하면?
 - Repository 의 save() 등과 같은 메서드에 모두 @Transactional 이 붙어있다는 것 설명
-- 즉 트랜잭션단위를 지정하지 않으면 개별 건건마다 단건 데이터 처리가 되며, 별개의 트랜잭션 세션으로 실행된다는 점
+- 즉 트랜잭션단위를 지정하지 않으면 개별 건건마다 단건 데이터 처리 수행시 각각이 별개의 트랜잭션 세션으로 실행된다는 것 설명 (스프링 코드 설명)
 
 테스트 메서드에서의 @Transactional 의 동작
 - 테스트 종료시마다 테스트 시에 수행한 데이터 작업에 대한 데이터를 모두 롤백시킨다는 것 
 - 매번 같은 환경에서 수행됨을 보장하고 멱등성을 보장하기 위해
+
+<br/>
 
 
 
@@ -23,9 +25,29 @@
 
 
 
-@Transactional 적용 규칙
-- 
+<br/>
 
+
+
+@Transactional 이 AOP 로 적용될때 실제 그 객체가 아닌 그 객체를 상속받은 Proxy 객체를 이용해서 Transaction 을 수행하며, 이것은 @Transactional 애노테이션이 붙어있는 부분들에 대해 어노테이션 기반으로 스캔을 해서 트랜잭션의 시작, 끝에 transaction begin commit 이 발생한다. <br/>
+
+- Proxy 객체가 실제 객체를 상속받은 가짜 객체다보니 이것으로 인해 transactional 메서드 내에서 내부 메서드 호출시에 Proxy 객체 내부의 메서드가 아닌 실제 객체의 내부 메서드를 호출하게 되는 경우 역시 설명
+
+
+
+<br/>
+
+
+
+@Transactional 적용 규칙
+- interface 레벨, class 레벨,메서드 레벨 
+- 자식 클래스에서는?
+- 내부 메서드 호출시에는?
+-  @Transactional 전파옵션 
+
+
+
+<br/>
 
 
 
