feat : 1 vs n (review, book)

--- a/doc/08.1.entity-relation-n-vs-1.md
+++ b/doc/08.1.entity-relation-n-vs-1.md
@@ -200,7 +200,7 @@ public interface PublisherRepository extends JpaRepository<Publisher, Long> {
     + "inner join fetch p.books "
     + "where p.id = :id"
   )
-  Publisher findBookDetailDtoById(@Param("id") Long id);
+  Publisher findBookByIdFetch(@Param("id") Long id);
 }
 ```
 
