--- a/doc/00.classpath 내의 schema.sql, data.sql 관련 이슈 (스캔되는 이슈).md
+++ b/doc/00.classpath 내의 schema.sql, data.sql 관련 이슈 (스캔되는 이슈).md
@@ -1,6 +1,6 @@
 # classpath 내의 schema.sql, data.sql 관련 이슈 (스캔되는 이슈)
 
-schema.sql, data.sql 을 src/main/resources 또는 src/test/resources 에 두면 스캔되는 이슈가 있습니다. 현재 `spring.datasource.schema` 와 같은 속성이 Deprecated 되어있음에도 불구하고 schema.sql, data.sql 을 src/main/resources 밑에 두면 읽어들여서 스키마를 초기화 하는 일이 발생합니다.<br/>
+`src/main/resources`, `src/test/resources` 에 schema.sql, data.sql 파일을 두면 스캔되는 이슈가 있습니다. 현재 `spring.datasource.schema` 와 같은 속성이 Deprecated 되어있음에도 불구하고 `src/main/resources`, `src/test/resources` 에 schema.sql, data.sql 파일을 두면 이것들을 읽어들여서 스키마를 초기화 하는 일이 발생합니다.<br/>
 
 예제 프로젝트에서도 가급적이면 `src/main/resources`, `src/test/resources` 에 schema.sql, data.sql 파일을 두지 않는 습관을 들이는게 좋을 듯 합니다. 프로덕션까지 나가야 하는 상용 제품일 경우에도 `src/main/resources`, `src/test/resources` 에 schema.sql, data.sql 을 두는 경우는 거의 없습니다.<br/>
 
